--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pixr-react-app",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,18 +19,7 @@
     "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "db:create": "dotenv sequelize-cli db:create",
-    "db:drop": "dotenv sequelize-cli db:drop",
-    "db:migrate": "dotenv sequelize-cli db:migrate",
-    "db:migrate:undo:all": "dotenv sequelize-cli db:migrate:undo:all",
-    "db:seed:all": "dotenv sequelize-cli db:seed:all",
-    "db:seed:undo:all": "dotenv sequelize-cli db:seed:undo:all",
-    "migration:generate": "sequelize-cli migration:generate",
-    "model:generate": "sequelize-cli model:generate",
-    "seed:generate": "sequelize-cli seed:generate",
-    "db:redo": "npm run db:seed:undo:all && npm run db:migrate:undo:all && npm run db:migrate && npm run db:seed:all",
-    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client && npm run db:redo"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
