--- a/package.json
+++ b/package.json
@@ -35,12 +35,22 @@
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "mysql2": "^2.1.0",
     "path": "^0.12.7",
     "pg": "^8.3.0",
+    "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sequelize": "^6.3.4",
     "sequelize-cli": "^6.2.0",
     "uuid": "^8.3.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Zackitty/pixr.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Zackitty/pixr/issues"
+  },
+  "homepage": "https://github.com/Zackitty/pixr#readme"
 }
