--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ PORT=8000
 DB_USERNAME=pixrcompanyapp
 DB_PASSWORD=oats
 DB_DATABASE=Pixr
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 JWT_SECRET=strong_random_bytes
 JWT_EXPIRES_IN=100000
