--- a/package.json
+++ b/package.json
@@ -21,25 +21,36 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-config": "^1.4.0",
+    "aws-sdk": "^2.739.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
+    "dotenv": "^8.2.0",
     "dotenv-cli": "^3.2.0",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-bearer-token": "^2.4.0",
+    "express-fileupload": "^1.1.10",
     "express-validator": "^6.6.1",
     "faker": "^4.1.0",
+    "fs": "0.0.1-security",
     "helmet": "^4.0.0",
     "http": "0.0.1-security",
     "http-errors": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.1.0",
     "path": "^0.12.7",
     "pg": "^8.3.0",
     "react": "^16.13.1",
+    "react-aws-s3": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "sequelize": "^6.3.4",
     "sequelize-cli": "^6.2.0",
     "uuid": "^8.3.0"
