--- a/package.json
+++ b/package.json
@@ -29,11 +29,10 @@
     "debug": "^4.1.1",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^3.2.0",
-    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-bearer-token": "^2.4.0",
-    "express-fileupload": "^1.1.10",
+    "express-fileuploader-s3": "0.0.1",
     "express-validator": "^6.6.1",
     "faker": "^4.1.0",
     "fs": "0.0.1-security",
@@ -52,8 +51,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "sequelize": "^6.3.4",
-    "sequelize-cli": "^6.2.0",
-    "uuid": "^8.3.0"
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {},
   "repository": {
