--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ flask-jwt-extended = "*"
 bcrypt = "*"
 flask-sqlalchemy = "*"
 alembic = "*"
+psycopg2 = "*"
+psycopg2-binary = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
